# what-to-watch

./: .gitignore  .pre-commit-config.yaml  Base.css  Base.html  Makefile  README.md  db.sqlite3  load_imdb_data.py  manage.py  movies.json  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  temp.json
.github/workflows/: test.yaml
data_dumps/: basic.json
imdb_data/: dump_data.py  example.csv  imdb_combined.csv
movies/: admin.py  forms.py  models.py  urls.py  views.py
movies/fixtures/: watch-item-dump.json
movies/management/commands/: csv_to_movies.py  update_from_imdb.py
movies/migrations/: 0001_initial.py  0002_auto_20220501_1917.py  0002_auto_20220705_2131.py
movies/static/: base.css  main.css
movies/templates/movies/: Base.html  index.html
what_to_watch/: asgi.py  settings.py  test_settings.py  urls.py  wsgi.py
