[tool.poetry]
name = "what-to-watch"
version = "0.1.0"
description = ""
authors = ["Ferdia Soper Mac Cafraidh <sopermaf@tcd.ie>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "3.2.13"
marshmallow = "^3.15.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
pre-commit = "^2.17.0"
pytest = "^7.0.1"
pytest-django = "^4.5.2"
pytest-cov = "^3.0.0"
ipython = "^8.1.1"
pandas = "^1.4.1"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']


[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
